# libd2

./: Cargo.toml  LICENSE  readme.md
src/: core.rs  lib.rs
src/client/: client.rs
src/core/: act.rs  area.rs  areas.rs  character_class.rs  coordinate.rs  entity.rs  game_state.rs  map.rs  network.rs  party.rs  protocol.rs  unit_stat.rs  update.rs
src/core/entity/: mercenary.rs  missile.rs  npc.rs  player.rs
src/core/network/: connection.rs  d2gs.rs  huffman.rs  realm_connection.rs
src/core/network/d2gs/: d2gs_packet.rs  d2gs_reader.rs
src/core/network/realm_connection/: server_message.rs
src/core/protocol/: client_message.rs  server_message.rs
